--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ubicacion"
             android:title="@string/menu_inicio" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
+            android:id="@+id/nav_perfil"
+            android:icon="@drawable/perfil"
             android:title="@string/menu_perfil" />
         <item
             android:id="@+id/nav_inmuebles"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/inmuebles"
             android:title="@string/menu_slideshow" />
     </group>
 </menu>
