--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,7 +18,7 @@
         tools:layout="@layout/fragment_perfil" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_inmuebles"
         android:name="com.example.lab3_moviles.ui.inmuebles.InmueblesFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_inmuebles" />
