--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray_light">#E0E0E0</color>
+    <color name="gray_400">#BDBDBD</color>
+    <color name="primary_500">#1565C0</color>
+    <color name="primary_700">#0D47A1</color>
 </resources>
