Editar perfil, Logout, mapa, cambiar clave

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,5 +16,9 @@
             android:id="@+id/nav_inmuebles"
             android:icon="@drawable/inmuebles"
             android:title="@string/menu_slideshow" />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/logout"
+            android:title="@string/Logout" />
     </group>
 </menu>
