--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,11 +15,31 @@
         android:id="@+id/nav_perfil"
         android:name="com.example.lab3_moviles.ui.perfil.PerfilFragment"
         android:label="@string/menu_perfil"
-        tools:layout="@layout/fragment_perfil" />
+        tools:layout="@layout/fragment_perfil" >
+        <action
+            android:id="@+id/action_nav_perfil_to_nav_cambiarClave2"
+            app:destination="@id/nav_cambiarClave" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_inmuebles"
         android:name="com.example.lab3_moviles.ui.inmuebles.InmueblesFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_inmuebles" />
+
+    <fragment
+        android:id="@+id/nav_logout"
+        android:name="com.example.lab3_moviles.ui.logout.LogoutFragment"
+        android:label="@string/Logout"
+        tools:layout="@layout/fragment_logout" />
+
+    <fragment
+        android:id="@+id/nav_cambiarClave"
+        android:name="com.example.lab3_moviles.ui.perfil.CambiarClaveFragment"
+        android:label="@string/CambiarClave"
+        tools:layout="@layout/fragment_cambiar_clave" >
+        <action
+            android:id="@+id/action_nav_cambiarClave_to_nav_perfil"
+            app:destination="@id/nav_perfil" />
+    </fragment>
 </navigation>
