--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,14 @@
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="0dp"
-        android:layout_height="400dp"
+        android:layout_height="0dp"
         android:background="@drawable/bg_header_gradient"
         android:gravity="center_horizontal"
-        android:paddingTop="48dp"
+        android:paddingTop="0dp"
         android:orientation="vertical"
         android:padding="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.4"
+        app:layout_constraintHeight_percent="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -37,7 +37,7 @@
             android:id="@+id/ivLogo"
             android:layout_width="450dp"
             android:layout_height="250dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
             android:contentDescription="@string/app_name"
             android:src="@drawable/logo"
             app:tint="@android:color/white" />
@@ -46,10 +46,11 @@
     <LinearLayout
         android:id="@+id/loginContainer"
         android:layout_width="0dp"
-        android:layout_height="280dp"
+        android:layout_height="300dp"
         android:orientation="vertical"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -61,7 +62,6 @@
             android:id="@+id/etMail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
             android:background="@drawable/edittext_background"
             android:hint="Email"
             android:inputType="textPersonName"
@@ -91,8 +91,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
-            android:backgroundTint="@color/teal_700"
+            android:backgroundTint="@color/primary_700"
             android:text="Ingresar"
+            android:textSize="16sp"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
