--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,7 +25,20 @@
         android:id="@+id/nav_inmuebles"
         android:name="com.example.lab3_moviles.ui.inmuebles.InmueblesFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_inmuebles" />
+        tools:layout="@layout/fragment_inmuebles" >
+        <action
+            android:id="@+id/action_nav_inmuebles_to_nav_detalleInmueble"
+            app:destination="@id/nav_detalleInmueble" />
+    </fragment>
+    <fragment
+        android:id="@+id/nav_detalleInmueble"
+        android:name="com.example.lab3_moviles.ui.inmuebles.DetalleInmuebleFragment"
+        android:label="Detalle del inmueble"
+        tools:layout="@layout/fragment_detalle_inmueble" >
+        <action
+            android:id="@+id/action_nav_detalleInmueble_to_nav_inmuebles"
+            app:destination="@id/nav_inmuebles" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_logout"
@@ -42,4 +55,8 @@
             android:id="@+id/action_nav_cambiarClave_to_nav_perfil"
             app:destination="@id/nav_perfil" />
     </fragment>
+    <fragment
+        android:id="@+id/nav_agregarInmueble"
+        android:name="com.example.lab3_moviles.ui.inmuebles.AgregarInmuebleFragment"
+        android:label="Agregar Inmueble" />
 </navigation>
