--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray_light">#E0E0E0</color>
     <color name="gray_400">#BDBDBD</color>
-    <color name="primary_500">#1565C0</color>
-    <color name="primary_700">#0D47A1</color>
+    <color name="primary_500">#87B2E4</color>
+    <color name="primary_700">#435B80</color>
 </resources>
