Contrato, pagos, inquilinos

--- a/app/src/main/res/layout/fragment_cambiar_clave.xml
+++ b/app/src/main/res/layout/fragment_cambiar_clave.xml
@@ -15,11 +15,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
         app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/tvClaveActual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Clave nueva"
+        android:text="Clave actual"
         app:layout_constraintBottom_toTopOf="@+id/etClaveActual"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
